--- a/drivers/staging/prima/Kbuild
+++ b/drivers/staging/prima/Kbuild
@@ -791,6 +791,11 @@ endif
 EXTRA_CFLAGS += $(call cc-disable-warning, enum-conversion)
 EXTRA_CFLAGS += $(call cc-option, -Wframe-larger-than=2048)
 
+# Silence Clang warning
+ifeq ($(cc-name),clang)
+EXTRA_CFLAGS += -Wno-enum-conversion
+endif
+
 ifeq ($(CONFIG_WLAN_OFFLOAD_PACKETS),y)
 CDEFINES += -DWLAN_FEATURE_OFFLOAD_PACKETS
 endif
