--- a/arch/arm64/configs/santoni_treble_defconfig
+++ b/arch/arm64/configs/santoni_treble_defconfig
@@ -326,6 +326,7 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v26=y
 CONFIG_SECURE_TOUCH_SYNAPTICS_DSX_V26=y
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 CONFIG_TOUCHSCREEN_FT5336=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_HBTP_INPUT=y
 CONFIG_INPUT_QPNP_POWER_ON=y
