--- a/arch/arm64/configs/santoni_treble_defconfig
+++ b/arch/arm64/configs/santoni_treble_defconfig
@@ -9,7 +9,7 @@ CONFIG_SCHED_WALT=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
-CONFIG_PSI=y
+# CONFIG_PSI is not set
 CONFIG_RCU_EXPERT=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RCU_BOOST=y
@@ -78,7 +78,7 @@ CONFIG_PREEMPT=y
 CONFIG_HZ_1000=y
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
-CONFIG_PROCESS_RECLAIM=y
+# CONFIG_PROCESS_RECLAIM is not set
 CONFIG_SECCOMP=y
 # CONFIG_UNMAP_KERNEL_AT_EL0 is not set
 CONFIG_ARMV8_DEPRECATED=y
@@ -731,3 +731,4 @@ CONFIG_QMI_ENCDEC=y
 CONFIG_SERIAL_NUM=y
 CONFIG_SECBOOT_FUSE=y
 CONFIG_SRANDOM=y
+CONFIG_PRLMK=y
