--- a/arch/arm64/configs/santoni_treble_defconfig
+++ b/arch/arm64/configs/santoni_treble_defconfig
@@ -10,8 +10,10 @@ CONFIG_SCHED_WALT=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
+CONFIG_PSI=y
 CONFIG_RCU_EXPERT=y
 CONFIG_RCU_FAST_NO_HZ=y
+CONFIG_RCU_BOOST=y
 CONFIG_RCU_NOCB_CPU=y
 CONFIG_RCU_NOCB_CPU_ALL=y
 CONFIG_IKCONFIG=y
@@ -44,7 +46,6 @@ CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
-CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SIG=y
 CONFIG_MODULE_SIG_FORCE=y
@@ -60,10 +61,10 @@ CONFIG_ARCH_QCOM=y
 CONFIG_ARCH_MSM8937=y
 CONFIG_ARCH_MSM8940=y
 CONFIG_MACH_XIAOMI_SANTONI=y
-CONFIG_ARCH_MSM8917=y
-CONFIG_ARCH_QM215=y
-CONFIG_ARCH_SDM429=y
-CONFIG_ARCH_SDM439=y
+# CONFIG_ARCH_MSM8917 is not set
+# CONFIG_ARCH_QM215 is not set
+# CONFIG_ARCH_SDM429 is not set
+# CONFIG_ARCH_SDM439 is not set
 # CONFIG_ARM64_ERRATUM_1024718 is not set
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
@@ -80,6 +81,9 @@ CONFIG_SETEND_EMULATION=y
 CONFIG_ARM64_SW_TTBR0_PAN=y
 # CONFIG_ARM64_VHE is not set
 CONFIG_RANDOMIZE_BASE=y
+CONFIG_CMDLINE="androidboot.usbconfigfs=true"
+CONFIG_CMDLINE_EXTEND=y
+# CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
@@ -88,6 +92,7 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -117,6 +122,12 @@ CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 CONFIG_INET_UDP_DIAG=y
 CONFIG_INET_DIAG_DESTROY=y
+CONFIG_TCP_CONG_ADVANCED=y
+# CONFIG_TCP_CONG_BIC is not set
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_BBR=y
+# CONFIG_TCP_CONG_HTCP is not set
+CONFIG_DEFAULT_BBR=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
@@ -360,7 +371,7 @@ CONFIG_SPI_SPIDEV=y
 CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_SPMI=y
 CONFIG_PINCTRL_MSM8937=y
-CONFIG_PINCTRL_MSM8917=y
+# CONFIG_PINCTRL_MSM8917 is not set
 CONFIG_PINCTRL_MSM8940=y
 CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 CONFIG_GPIOLIB=y
@@ -369,10 +380,10 @@ CONFIG_GPIO_QPNP_PIN=y
 CONFIG_POWER_RESET_QCOM=y
 # CONFIG_QCOM_DLOAD_MODE is not set
 CONFIG_QPNP_FG=y
-CONFIG_SMB135X_CHARGER=y
-CONFIG_SMB1360_CHARGER_FG=y
-CONFIG_SMB1355_SLAVE_CHARGER=y
-CONFIG_SMB1351_USB_CHARGER=y
+CONFIG_SMB135X_CHARGER=n
+CONFIG_SMB1360_CHARGER_FG=n
+CONFIG_SMB1355_SLAVE_CHARGER=n
+CONFIG_SMB1351_USB_CHARGER=n
 CONFIG_QPNP_SMB5=y
 CONFIG_QPNP_SMBCHARGER=y
 CONFIG_QPNP_VM_BMS=y
@@ -452,6 +463,7 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS=y
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
+CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_CLASS_DEVICE is not set
 CONFIG_SOUND=y
 CONFIG_SND=y
@@ -550,7 +562,6 @@ CONFIG_UIO=y
 CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_PRONTO_WLAN=y
@@ -661,17 +672,18 @@ CONFIG_SCHEDSTATS=y
 CONFIG_IPC_LOGGING=y
 CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 CONFIG_FTRACE=y
+CONFIG_BLK_DEV_IO_TRACE=y
 CONFIG_ENABLE_DEFAULT_TRACERS=y
 # CONFIG_TRACING_EVENTS_GPIO is not set
-CONFIG_DEBUG_ALIGN_RODATA=y
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
-CONFIG_CORESIGHT_QCOM_REPLICATOR=y
-CONFIG_CORESIGHT_STM=y
-CONFIG_CORESIGHT_TPDA=y
-CONFIG_CORESIGHT_TPDM=y
-CONFIG_CORESIGHT_EVENT=y
-CONFIG_CORESIGHT_HWEVENT=y
+CONFIG_DEBUG_ALIGN_RODATA=n
+CONFIG_CORESIGHT=n
+CONFIG_CORESIGHT_LINK_AND_SINK_TMC=n
+CONFIG_CORESIGHT_QCOM_REPLICATOR=n
+CONFIG_CORESIGHT_STM=n
+CONFIG_CORESIGHT_TPDA=n
+CONFIG_CORESIGHT_TPDM=n
+CONFIG_CORESIGHT_EVENT=n
+CONFIG_CORESIGHT_HWEVENT=n
 CONFIG_PFK=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
